デフォルトテーブルスタイル設定機能を追加
テーブルのデフォルトスタイル（ヘッダー・ボディのセル背景色、文字色、フォント、余白等）をGUIで編集・保存できる機能を追加。設定はAppDataにXML保存され、リボンに「デフォルトスタイル設定」ボタンを追加。関連クラス・フォーム・リボン処理・プロジェクトファイルを新規実装。

--- a/PowerPointUsefulTools.csproj
+++ b/PowerPointUsefulTools.csproj
@@ -182,6 +182,7 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="DefaultTableSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -205,6 +206,9 @@
     </Compile>
     <Compile Include="RibbonUsefulTools.cs" />
     <Compile Include="TableLayoutManager.cs" />
+    <Compile Include="TableSettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="ThisAddIn.cs">
       <SubType>Code</SubType>
     </Compile>
