テーブル罫線スタイルの設定・保存機能を追加
テーブルセルの罫線（上・下・左・右）の表示・色・太さ・線種をデフォルト設定として保存・編集できる機能を追加しました。
DefaultTableSettings/DefaultCellStyle に罫線スタイルを追加し、TableLayoutManager で罫線情報のコピー・適用処理を実装。
TableSettingsForm のUIに罫線設定パネルを追加し、各方向ごとに編集可能にしました。
罫線設定の読み込み・保存処理も追加。設定画面サイズを拡大。
copilot-instructions.md を追加し、罫線「右」行のレイアウト崩れは既知の問題として保留中である旨を記載しました。

--- a/PowerPointUsefulTools.csproj
+++ b/PowerPointUsefulTools.csproj
@@ -195,6 +195,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include=".github\copilot-instructions.md" />
     <None Include="PowerPointUsefulTools_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
